Bug 403420 - notification bar should show the host for the login it's asking to save. r=gavin, ui-r=beltzner
UltraBlame original commit: e8b8677097d0b5409a815bb33778f75d07cf4dc9

--- a/toolkit/components/passwordmgr/test/test_notifications.html
+++ b/toolkit/components/passwordmgr/test/test_notifications.html
@@ -231,6 +231,50 @@ notifications
 *
 *
 /
+/
+/
+Set
+testpath
+to
+the
+directory
+where
+we
+live
+.
+Used
+to
+load
+tests
+from
+/
+/
+alternate
+Mochitest
+servers
+(
+different
+hostnames
+same
+content
+)
+.
+var
+testpath
+=
+document
+.
+location
+.
+pathname
++
+"
+/
+.
+.
+/
+"
+;
 var
 subtests
 =
@@ -395,6 +439,78 @@ html
 /
 /
 20
+"
+http
+:
+/
+/
+test1
+.
+example
+.
+org
+:
+80
+"
++
+testpath
++
+"
+subtst_notifications_1
+.
+html
+"
+/
+/
+21
+"
+http
+:
+/
+/
+test1
+.
+example
+.
+org
+:
+80
+"
++
+testpath
++
+"
+subtst_notifications_7
+.
+html
+"
+/
+/
+22
+"
+http
+:
+/
+/
+test1
+.
+example
+.
+org
+:
+80
+"
++
+testpath
++
+"
+subtst_notifications_6
+.
+html
+"
+/
+/
+23
 ]
 ;
 var
@@ -614,6 +730,8 @@ checkTest
 {
 var
 bar
+notificationText
+expectedText
 ;
 /
 /
@@ -2504,6 +2622,431 @@ pwmgr
 removeLogin
 (
 login2
+)
+;
+break
+;
+case
+21
+:
+/
+/
+Check
+text
+on
+a
+user
++
+pass
+notification
+bar
+is
+(
+gotUser
+"
+notifyu1
+"
+"
+Checking
+submitted
+username
+"
+)
+;
+is
+(
+gotPass
+"
+notifyp1
+"
+"
+Checking
+submitted
+password
+"
+)
+;
+bar
+=
+getNotificationBar
+(
+notifyBox
+"
+password
+-
+save
+"
+)
+;
+ok
+(
+bar
+"
+got
+notification
+bar
+"
+)
+;
+/
+/
+Check
+the
+text
+which
+comes
+from
+the
+localized
+saveLoginText
+string
+.
+notificationText
+=
+bar
+.
+getAttribute
+(
+"
+label
+"
+)
+;
+expectedText
+=
+/
+^
+Do
+you
+want
+.
++
+to
+remember
+the
+password
+for
+\
+"
+notifyu1
+\
+"
+on
+example
+.
+org
+\
+?
+/
+;
+ok
+(
+expectedText
+.
+test
+(
+notificationText
+)
+"
+Checking
+text
+:
+"
++
+notificationText
+)
+;
+clickNotificationButton
+(
+bar
+"
+Not
+Now
+"
+)
+;
+break
+;
+case
+22
+:
+/
+/
+Check
+text
+on
+a
+user
++
+pass
+notification
+bar
+username
+is
+really
+long
+is
+(
+gotUser
+"
+nowisthetimeforallgoodmentocometotheaidoftheircountry
+"
+"
+Checking
+submitted
+username
+"
+)
+;
+is
+(
+gotPass
+"
+notifyp1
+"
+"
+Checking
+submitted
+password
+"
+)
+;
+bar
+=
+getNotificationBar
+(
+notifyBox
+"
+password
+-
+save
+"
+)
+;
+ok
+(
+bar
+"
+got
+notification
+bar
+"
+)
+;
+/
+/
+Check
+the
+text
+which
+comes
+from
+the
+localized
+saveLoginText
+string
+.
+notificationText
+=
+bar
+.
+getAttribute
+(
+"
+label
+"
+)
+;
+expectedText
+=
+/
+^
+Do
+you
+want
+.
++
+to
+remember
+the
+password
+for
+\
+"
+nowisthetimeforallgoodmentocom
+[
+^
+e
+]
+\
+"
+on
+example
+.
+org
+\
+?
+/
+;
+ok
+(
+expectedText
+.
+test
+(
+notificationText
+)
+"
+Checking
+text
+:
+"
++
+notificationText
+)
+;
+clickNotificationButton
+(
+bar
+"
+Not
+Now
+"
+)
+;
+break
+;
+case
+23
+:
+/
+/
+Check
+text
+on
+a
+pass
+-
+only
+notification
+bar
+is
+(
+gotUser
+"
+null
+"
+"
+Checking
+submitted
+username
+"
+)
+;
+is
+(
+gotPass
+"
+notifyp1
+"
+"
+Checking
+submitted
+password
+"
+)
+;
+bar
+=
+getNotificationBar
+(
+notifyBox
+"
+password
+-
+save
+"
+)
+;
+ok
+(
+bar
+"
+got
+notification
+bar
+"
+)
+;
+/
+/
+Check
+the
+text
+which
+comes
+from
+the
+localized
+saveLoginTextNoUser
+string
+.
+notificationText
+=
+bar
+.
+getAttribute
+(
+"
+label
+"
+)
+;
+expectedText
+=
+/
+^
+Do
+you
+want
+.
++
+to
+remember
+this
+password
+on
+example
+.
+org
+\
+?
+/
+;
+ok
+(
+expectedText
+.
+test
+(
+notificationText
+)
+"
+Checking
+text
+:
+"
++
+notificationText
+)
+;
+clickNotificationButton
+(
+bar
+"
+Not
+Now
+"
 )
 ;
 break
