Bug 415960 - bookmark tags edit control should provide autocomplete (r=mano, core by asouzisusers.sf.net)
UltraBlame original commit: efe787d282859c792322015f6ab6b6614a569f22

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -11804,6 +11804,27 @@ none
 editBookmarkPanel
 #
 editBMPanel_tagsField
+[
+focused
+=
+"
+true
+"
+]
+{
+background
+-
+color
+:
+#
+eeeeee
+;
+color
+:
+#
+000000
+;
+}
 #
 editBookmarkPanel
 #
@@ -11946,17 +11967,6 @@ color
 bbbbbb
 ;
 }
-#
-editBookmarkPanel
-#
-editBMPanel_tagsField
-[
-focused
-=
-"
-true
-"
-]
 #
 editBookmarkPanel
 #
