--- a/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
@@ -954,6 +954,54 @@ none
 }
 /
 *
+Hide
+the
+value
+column
+of
+the
+tag
+autocomplete
+popup
+*
+leaving
+only
+the
+comment
+column
+visible
+.
+This
+is
+*
+so
+that
+only
+the
+tag
+being
+edited
+is
+shown
+in
+the
+*
+popup
+.
+*
+/
+#
+editBMPanel_tagsField
+#
+treecolAutoCompleteValue
+{
+visibility
+:
+collapse
+;
+}
+/
+*
 Bookmark
 panel
 dropdown
