Bug 455906: Support severities for blocklist entries. r=robstrong, r=jst
UltraBlame original commit: bbccbf2c74562ce6307792746d4126a9b1facb76

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -832,6 +832,16 @@ true
 notifyBadge
 richlistitem
 [
+blocklistedsoft
+=
+"
+true
+"
+]
+.
+notifyBadge
+richlistitem
+[
 satisfiesDependencies
 =
 "
@@ -986,6 +996,52 @@ true
 .
 needsDependenciesBox
 richlistitem
+:
+not
+(
+[
+blocklisted
+=
+"
+true
+"
+]
+)
+:
+not
+(
+[
+blocklistedsoft
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
 [
 blocklisted
 =
@@ -994,7 +1050,17 @@ false
 "
 ]
 .
-blocklistedBox
+blocklistedLabel
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+.
+softBlocklistedLabel
 richlistitem
 [
 opType
