--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -745,6 +745,16 @@ true
 notifyBadge
 richlistitem
 [
+blocklistedsoft
+=
+"
+true
+"
+]
+.
+notifyBadge
+richlistitem
+[
 satisfiesDependencies
 =
 "
@@ -901,6 +911,52 @@ true
 .
 needsDependenciesBox
 richlistitem
+:
+not
+(
+[
+blocklisted
+=
+"
+true
+"
+]
+)
+:
+not
+(
+[
+blocklistedsoft
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
 [
 blocklisted
 =
@@ -909,7 +965,17 @@ false
 "
 ]
 .
-blocklistedBox
+blocklistedLabel
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+.
+softBlocklistedLabel
 richlistitem
 [
 opType
