--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -793,6 +793,16 @@ true
 notifyBadge
 richlistitem
 [
+blocklistedsoft
+=
+"
+true
+"
+]
+.
+notifyBadge
+richlistitem
+[
 satisfiesDependencies
 =
 "
@@ -947,6 +957,52 @@ true
 .
 needsDependenciesBox
 richlistitem
+:
+not
+(
+[
+blocklisted
+=
+"
+true
+"
+]
+)
+:
+not
+(
+[
+blocklistedsoft
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+.
+blocklistedBox
+richlistitem
 [
 blocklisted
 =
@@ -955,7 +1011,17 @@ false
 "
 ]
 .
-blocklistedBox
+blocklistedLabel
+richlistitem
+[
+blocklistedsoft
+=
+"
+false
+"
+]
+.
+softBlocklistedLabel
 richlistitem
 [
 opType
