Correct mochitest for bug 461266.
UltraBlame original commit: b50dbc86eb608b08c4bda0202314dd8f2b5f76ff

--- a/layout/style/test/test_acid3_test46.html
+++ b/layout/style/test/test_acid3_test46.html
@@ -1962,17 +1962,29 @@ check
 '
 r
 '
-false
+true
 )
 ;
+/
+/
+false
+in
+old
+spec
 check
 (
 '
 s
 '
-false
+true
 )
 ;
+/
+/
+false
+in
+old
+spec
 check
 (
 '
