Don't eat up too much when we hit an error in the last media query in a list.  (Bug 461266)  r+sr=bzbarsky
UltraBlame original commit: 01406b3b31c01cc3b1da28d36c8c3bc8498ba9ad

--- a/layout/style/test/test_media_queries.html
+++ b/layout/style/test/test_media_queries.html
@@ -530,6 +530,7 @@ data
 =
 "
 media
+screen
 "
 +
 q
@@ -562,20 +563,6 @@ cssRules
 length
 =
 =
-0
-)
-return
-false
-;
-if
-(
-sheet
-.
-cssRules
-.
-length
-=
-=
 1
 &
 &
@@ -594,7 +581,21 @@ CSSRule
 MEDIA_RULE
 )
 return
-true
+sheet
+.
+cssRules
+[
+0
+]
+.
+media
+.
+mediaText
+!
+=
+"
+screen
+"
 ;
 ok
 (
