Fixing test for bug 385823 to not depend on clipping of %-overheight cells.
UltraBlame original commit: 42337cd2145ce66dfac147a57c49de6ba4399e22

--- a/layout/reftests/bugs/385823-2c.html
+++ b/layout/reftests/bugs/385823-2c.html
@@ -109,16 +109,6 @@ scale
 the
 image
 .
-This
-text
-should
-end
-up
-hidden
-behind
-the
-image
-.
 -
 -
 >
@@ -133,6 +123,17 @@ size
 :
 20
 %
+;
+color
+:
+rgba
+(
+0
+0
+0
+0
+)
+;
 "
 >
 text
