Bug 248970 - Private Browsing mode (global toggle for saving/caching everything) [unit test API changes]; r,sr=mconnor
UltraBlame original commit: a6712f1f6c4ee6bc0bb6df4315d8d84c8b0bb336

--- a/toolkit/components/passwordmgr/test/test_privbrowsing.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing.html
@@ -1432,234 +1432,6 @@ testNum
 ;
 }
 }
-/
-/
-This
-observer
-prevents
-a
-prompt
-from
-showing
-up
-asking
-if
-the
-current
-/
-/
-session
-should
-be
-kept
-or
-closed
-upon
-entering
-the
-private
-browsing
-mode
-.
-/
-/
-It
-instructs
-the
-private
-browsing
-service
-to
-keep
-the
-current
-session
-open
-.
-var
-observer
-=
-{
-QueryInterface
-:
-function
-(
-iid
-)
-{
-const
-interfaces
-=
-[
-Ci
-.
-nsIObserver
-Ci
-.
-nsISupports
-]
-;
-if
-(
-!
-interfaces
-.
-some
-(
-function
-(
-v
-)
-iid
-.
-equals
-(
-v
-)
-)
-)
-throw
-Cr
-.
-NS_ERROR_NO_INTERFACE
-;
-return
-this
-;
-}
-observe
-:
-function
-(
-subject
-topic
-data
-)
-{
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-subject
-.
-QueryInterface
-(
-Ci
-.
-nsISupportsPRUint32
-)
-;
-subject
-.
-data
-=
-0
-;
-}
-register
-:
-function
-(
-)
-{
-var
-os
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-observer
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIObserverService
-)
-;
-os
-.
-addObserver
-(
-this
-"
-private
--
-browsing
--
-enter
-"
-false
-)
-;
-}
-unregister
-:
-function
-(
-)
-{
-var
-os
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-observer
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIObserverService
-)
-;
-os
-.
-removeObserver
-(
-this
-"
-private
--
-browsing
--
-enter
-"
-)
-;
-}
-}
-;
 var
 _PBSvc
 =
@@ -1911,10 +1683,17 @@ finished
 "
 )
 ;
-observer
+prefBranch
 .
-unregister
+clearUserPref
 (
+"
+browser
+.
+privatebrowsing
+.
+keep_current_session
+"
 )
 ;
 SimpleTest
@@ -2003,6 +1782,45 @@ null
 Access
 Cc
 "
+)
+;
+var
+prefBranch
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIPrefBranch
+)
+;
+prefBranch
+.
+setBoolPref
+(
+"
+browser
+.
+privatebrowsing
+.
+keep_current_session
+"
+true
 )
 ;
 var
