--- a/browser/themes/gnomestripe/browser/aboutPrivateBrowsing.css
+++ b/browser/themes/gnomestripe/browser/aboutPrivateBrowsing.css
@@ -1,4 +1,8 @@
-#
+%
+if
+0
+/
+*
 *
 *
 *
@@ -12,7 +16,7 @@ BLOCK
 *
 *
 *
-#
+*
 Version
 :
 MPL
@@ -29,8 +33,8 @@ LGPL
 2
 .
 1
-#
-#
+*
+*
 The
 contents
 of
@@ -44,7 +48,7 @@ Mozilla
 Public
 License
 Version
-#
+*
 1
 .
 1
@@ -65,7 +69,7 @@ except
 in
 compliance
 with
-#
+*
 the
 License
 .
@@ -78,7 +82,7 @@ of
 the
 License
 at
-#
+*
 http
 :
 /
@@ -91,8 +95,8 @@ org
 /
 MPL
 /
-#
-#
+*
+*
 Software
 distributed
 under
@@ -107,7 +111,7 @@ AS
 IS
 "
 basis
-#
+*
 WITHOUT
 WARRANTY
 OF
@@ -121,7 +125,7 @@ implied
 See
 the
 License
-#
+*
 for
 the
 specific
@@ -132,11 +136,11 @@ and
 limitations
 under
 the
-#
+*
 License
 .
-#
-#
+*
+*
 The
 Original
 Code
@@ -144,8 +148,8 @@ is
 Private
 Browsing
 .
-#
-#
+*
+*
 The
 Initial
 Developer
@@ -154,11 +158,18 @@ the
 Original
 Code
 is
-#
+*
 Ehsan
 Akhgari
+<
+ehsan
 .
-#
+akhgari
+gmail
+.
+com
+>
+*
 Portions
 created
 by
@@ -171,7 +182,7 @@ Copyright
 C
 )
 2008
-#
+*
 the
 Initial
 Developer
@@ -180,26 +191,15 @@ All
 Rights
 Reserved
 .
-#
-#
+*
+*
 Contributor
 (
 s
 )
 :
-#
-Ehsan
-Akhgari
-<
-ehsan
-.
-akhgari
-gmail
-.
-com
->
-#
-#
+*
+*
 Alternatively
 the
 contents
@@ -213,7 +213,7 @@ under
 the
 terms
 of
-#
+*
 either
 the
 GNU
@@ -231,7 +231,7 @@ GPL
 "
 )
 or
-#
+*
 the
 GNU
 Lesser
@@ -250,7 +250,7 @@ the
 LGPL
 "
 )
-#
+*
 in
 which
 case
@@ -265,7 +265,7 @@ LGPL
 are
 applicable
 instead
-#
+*
 of
 those
 above
@@ -283,7 +283,7 @@ of
 this
 file
 only
-#
+*
 under
 the
 terms
@@ -300,7 +300,7 @@ to
 allow
 others
 to
-#
+*
 use
 your
 version
@@ -315,7 +315,7 @@ the
 MPL
 indicate
 your
-#
+*
 decision
 by
 deleting
@@ -328,7 +328,7 @@ them
 with
 the
 notice
-#
+*
 and
 other
 provisions
@@ -345,7 +345,7 @@ you
 do
 not
 delete
-#
+*
 the
 provisions
 above
@@ -359,7 +359,7 @@ of
 this
 file
 under
-#
+*
 the
 terms
 of
@@ -374,8 +374,8 @@ or
 the
 LGPL
 .
-#
-#
+*
+*
 *
 *
 *
@@ -389,59 +389,69 @@ BLOCK
 *
 *
 *
-DEPTH
-=
-.
-.
+*
 /
-.
-.
-/
-.
-.
-/
-.
-.
-topsrcdir
-=
-top_srcdir
-srcdir
-=
-srcdir
-VPATH
-=
-srcdir
-include
+%
+endif
+#
+errorPageContainer
+{
+background
+-
+image
+:
+url
 (
-DEPTH
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Privacy
+-
+48
+.
+png
+"
 )
-/
-config
-/
-autoconf
-.
-mk
-EXTRA_PP_COMPONENTS
-=
-\
-nsPrivateBrowsingService
-.
-js
-\
-aboutPrivateBrowsing
-.
-js
-\
-(
-NULL
-)
-include
-(
-topsrcdir
-)
-/
-config
-/
-rules
-.
-mk
+;
+}
+#
+clearRecentHistoryDesc
+{
+margin
+-
+top
+:
+2em
+;
+}
+#
+clearRecentHistoryDesc
+>
+button
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+#
+enjoyDesc
+{
+margin
+-
+top
+:
+2em
+;
+}
