Bug 462996 - Remove the UI to open "Clear Recent History" dialog from Private Browsing UI; r=mconnor
UltraBlame original commit: 7ffb0a42def98a14cd71a01b64f3a0559ef9b122

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -849,6 +849,24 @@ p
 /
 div
 >
+#
+XXX
+do
+not
+show
+the
+clear
+recent
+history
+section
+until
+bug
+453440
+is
+fixed
+#
+if
+0
 <
 !
 -
@@ -944,6 +962,8 @@ true
 /
 div
 >
+#
+endif
 <
 !
 -
