Bug 456088 - Ctrl+Tab revision. r=connor
UltraBlame original commit: 9dcff436bd1bb7348bc0c1d1b255a0f9c3a7b642

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -27,28 +27,7 @@ xul
 )
 ;
 namespace
-svg
-url
-(
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-2000
-/
-svg
-"
-)
-;
-namespace
-xlink
+html
 url
 (
 "
@@ -64,7 +43,7 @@ org
 /
 1999
 /
-xlink
+xhtml
 "
 )
 ;
@@ -799,25 +778,6 @@ Tab
 Previews
 *
 /
-svg
-|
-*
-.
-ctrlTab
--
-icon
-:
-not
-(
-[
-xlink
-|
-href
-]
-)
-svg
-|
-*
 .
 ctrlTab
 -
@@ -826,57 +786,12 @@ thumbnail
 not
 (
 [
-xlink
-|
-href
+valid
 ]
 )
 {
-display
+visibility
 :
-none
-;
-}
-svg
-|
-*
-.
-ctrlTab
--
-thumbnailborder
-{
-fill
-:
-transparent
-;
-}
-svg
-|
-*
-.
-ctrlTab
--
-icon
-{
-filter
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-content
-/
-browser
-.
-xul
-#
-ctrlTab
--
-iconShadow
-)
+hidden
 ;
 }
