--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -523,27 +523,6 @@ xhtml
 "
 )
 ;
-namespace
-svg
-url
-(
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-2000
-/
-svg
-"
-)
-;
 #
 menubar
 -
@@ -11014,6 +10993,14 @@ weight
 :
 bold
 ;
+font
+-
+size
+:
+1
+.
+5em
+;
 text
 -
 align
@@ -11024,80 +11011,156 @@ margin
 -
 top
 :
-.
-5em
+1em
 ;
 margin
 -
 bottom
 :
+1
 .
-7em
+5em
 ;
 }
-svg
-|
-*
 .
 ctrlTab
 -
-thumbnailborder
+thumbnail
 {
-stroke
+margin
+-
+bottom
 :
-ThreeDDarkShadow
+40px
 ;
-stroke
--
-width
-:
-.
-7px
-;
-}
-svg
-|
-*
-#
-ctrlTab
--
-fadeGradientTop
-{
-stop
--
-color
-:
-ThreeDShadow
-;
-stop
--
-opacity
-:
-.
-75
-;
-}
-svg
-|
-*
-#
-ctrlTab
--
-fadeGradientBottom
-{
-stop
--
-color
-:
 -
 moz
 -
-dialog
-;
-stop
+box
 -
-opacity
+shadow
+:
+1px
+2px
+3px
+ThreeDShadow
+;
+}
+.
+ctrlTab
+-
+thumbnail
+[
+selected
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+box
+-
+shadow
+:
+1px
+2px
+3px
+ThreeDShadow
+0
+0
+10px
+Highlight
+0
+0
+20px
+Highlight
+0
+0
+25px
+Highlight
+0
+0
+30px
+Highlight
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
+;
+text
+-
+align
+:
+center
+;
+}
+.
+ctrlTab
+-
+pagePointer
+{
+display
+:
+inline
+-
+block
+;
+margin
+:
+0
+1em
+1em
+;
+width
 :
 1
+.
+5em
+;
+height
+:
+1
+.
+5em
+;
+-
+moz
+-
+border
+-
+radius
+:
+.
+75em
+;
+background
+:
+ThreeDShadow
+;
+}
+.
+ctrlTab
+-
+pagePointer
+[
+selected
+=
+"
+true
+"
+]
+{
+background
+:
+ThreeDDarkShadow
 ;
 }
