--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -516,27 +516,6 @@ xhtml
 "
 )
 ;
-namespace
-svg
-url
-(
-"
-http
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-2000
-/
-svg
-"
-)
-;
 #
 main
 -
@@ -18174,11 +18153,11 @@ background
 :
 rgba
 (
-0
-0
-0
+68
+68
+68
 .
-8
+9
 )
 url
 (
@@ -18200,8 +18179,15 @@ border
 :
 1px
 solid
-#
-ccc
+rgba
+(
+255
+255
+255
+0
+.
+15
+)
 ;
 -
 moz
@@ -18225,6 +18211,32 @@ left
 :
 -
 1px
+;
+}
+.
+KUI
+-
+panel
+[
+level
+=
+"
+top
+"
+]
+{
+background
+-
+color
+:
+rgba
+(
+68
+68
+68
+.
+5
+)
 ;
 -
 moz
@@ -18257,47 +18269,6 @@ Panel
 #
 ctrlTab
 -
-panel
-{
-margin
--
-top
-:
--
-20px
-;
-border
--
-bottom
--
-width
-:
-9px
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-#
-ccc
-black
-black
-black
-black
-black
-black
-black
-black
-;
-}
-#
-ctrlTab
--
 label
 {
 font
@@ -18310,7 +18281,9 @@ font
 -
 size
 :
-14px
+1
+.
+5em
 ;
 text
 -
@@ -18322,74 +18295,198 @@ margin
 -
 top
 :
-6px
+1em
 ;
 margin
 -
 bottom
 :
-10px
+1
+.
+5em
+;
+text
+-
+shadow
+:
+black
+0
+0
+1em
 ;
 }
-svg
-|
-*
 .
 ctrlTab
 -
-thumbnailborder
+thumbnail
 {
-stroke
-:
-white
-;
-stroke
+margin
 -
-width
+bottom
+:
+40px
+;
+-
+moz
+-
+box
+-
+shadow
 :
 1px
-;
-}
-svg
-|
-*
-#
-ctrlTab
--
-fadeGradientTop
-{
-stop
--
-color
-:
+2px
+3px
 black
 ;
-stop
--
-opacity
-:
+}
 .
-5
+ctrlTab
+-
+thumbnail
+[
+selected
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+box
+-
+shadow
+:
+1px
+2px
+3px
+black
+0
+0
+10px
+white
+0
+0
+20px
+rgb
+(
+50
+170
+255
+)
+0
+0
+30px
+rgb
+(
+50
+170
+255
+)
 ;
 }
-svg
-|
-*
 #
 ctrlTab
 -
-fadeGradientBottom
+pages
 {
-stop
--
-color
+display
 :
-black
+block
 ;
-stop
+text
 -
-opacity
+align
+:
+center
+;
+}
+.
+ctrlTab
+-
+pagePointer
+{
+display
+:
+inline
+-
+block
+;
+margin
+:
+0
+1em
+1em
+;
+width
 :
 1
+.
+5em
+;
+height
+:
+1
+.
+5em
+;
+-
+moz
+-
+border
+-
+radius
+:
+.
+75em
+;
+background
+:
+rgba
+(
+0
+0
+0
+.
+5
+)
+;
+border
+:
+1px
+solid
+rgba
+(
+255
+255
+255
+.
+3
+)
+;
+}
+.
+ctrlTab
+-
+pagePointer
+[
+selected
+=
+"
+true
+"
+]
+{
+background
+:
+rgba
+(
+255
+255
+255
+.
+6
+)
 ;
 }
