Bug 436304 - Implement All Tabs panel with previews and search. r=connor
UltraBlame original commit: 9b96bcff860b407c869735835675a5a96c5376e7

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10430,142 +10430,6 @@ opacity
 0
 ;
 }
-/
-*
-All
-tabs
-menupopup
-*
-/
-.
-alltabs
--
-item
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-folder
--
-item
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
-.
-alltabs
--
-item
-[
-selected
-=
-"
-true
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-alltabs
--
-item
-[
-busy
-]
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
-.
-png
-"
-)
-;
-}
 .
 tabs
 -
@@ -10578,9 +10442,36 @@ toolbarbutton
 -
 icon
 {
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+alltabs
+.
+png
+"
+)
+;
 margin
 :
-0px
+2px
+0
+2px
 ;
 }
 /
@@ -10985,41 +10876,25 @@ Panel
 #
 ctrlTab
 -
-label
+panel
 {
-font
--
-weight
-:
-bold
-;
-font
--
-size
-:
-1
-.
-5em
-;
-text
--
-align
-:
-center
-;
-margin
+padding
 -
 top
 :
-1em
+15px
 ;
-margin
+}
+#
+ctrlTab
 -
-bottom
+search
+{
+margin
 :
-1
-.
-5em
+0
+0
+15px
 ;
 }
 .
@@ -11031,19 +10906,32 @@ margin
 -
 bottom
 :
-40px
+15px
 ;
+cursor
+:
+pointer
+;
+}
+.
+ctrlTab
 -
-moz
--
-box
--
-shadow
+thumbnail
+>
+html
+|
+canvas
+{
+border
 :
 1px
-2px
-3px
+solid
 ThreeDShadow
+;
+margin
+:
+-
+1px
 ;
 }
 .
@@ -11057,7 +10945,21 @@ selected
 true
 "
 ]
+.
+ctrlTab
+-
+thumbnail
+:
+hover
 {
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
 -
 moz
 -
@@ -11065,42 +10967,30 @@ box
 -
 shadow
 :
-1px
+0
+0
 2px
+Highlight
+0
+0
+2px
+Highlight
+0
+0
 3px
-ThreeDShadow
+Highlight
+0
+0
+4px
+Highlight
 0
 0
 10px
 Highlight
 0
 0
-20px
+15px
 Highlight
-0
-0
-25px
-Highlight
-0
-0
-30px
-Highlight
-;
-}
-#
-ctrlTab
--
-pages
-{
-display
-:
-block
-;
-text
--
-align
-:
-center
 ;
 }
 .
@@ -11108,12 +10998,6 @@ ctrlTab
 -
 pagePointer
 {
-display
-:
-inline
--
-block
-;
 margin
 :
 0
@@ -11146,6 +11030,10 @@ background
 :
 ThreeDShadow
 ;
+cursor
+:
+pointer
+;
 }
 .
 ctrlTab
@@ -11162,5 +11050,9 @@ true
 background
 :
 ThreeDDarkShadow
+;
+cursor
+:
+default
 ;
 }
