--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -822,28 +822,12 @@ border
 :
 none
 ;
-}
-#
-ctrlTab
--
-label
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-compositor
-)
-{
 font
 :
+"
 Segoe
 UI
+"
 window
 ;
 font
@@ -851,14 +835,6 @@ font
 weight
 :
 normal
-;
-font
--
-size
-:
-1
-.
-5em
 ;
 color
 :
@@ -873,20 +849,24 @@ white
 1px
 -
 1px
-9px
+.
+5em
 white
 -
 1px
 1px
-9px
+.
+5em
 white
 1px
 1px
-9px
+.
+5em
 white
 1px
 -
 1px
-9px
+.
+5em
 ;
 }
