--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13950,17 +13950,6 @@ button
 toolbarbutton
 -
 text
-.
-tabs
--
-alltabs
--
-button
->
-.
-toolbarbutton
--
-icon
 {
 display
 :
@@ -13977,16 +13966,47 @@ button
 .
 toolbarbutton
 -
-menu
--
-dropmarker
+icon
 {
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+alltabs
+.
+png
+"
+)
+;
 margin
 :
-2px
-1px
-2px
-0px
+6px
+0
+4px
+;
+-
+moz
+-
+image
+-
+region
+:
+auto
 ;
 }
 .
@@ -14112,142 +14132,6 @@ start
 bkgnd
 -
 animate
-.
-png
-"
-)
-;
-}
-/
-*
-All
-tabs
-menupopup
-*
-/
-.
-alltabs
--
-item
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-folder
--
-item
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
-.
-alltabs
--
-item
-[
-selected
-=
-"
-true
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-alltabs
--
-item
-[
-busy
-]
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
 .
 png
 "
@@ -17830,6 +17714,17 @@ level
 top
 "
 ]
+#
+ctrlTab
+-
+panel
+:
+not
+(
+[
+sticky
+]
+)
 {
 background
 -
@@ -17875,13 +17770,13 @@ Panel
 #
 ctrlTab
 -
-label
+panel
 {
-font
+padding
 -
-weight
+top
 :
-bold
+20px
 ;
 font
 -
@@ -17889,36 +17784,36 @@ size
 :
 1
 .
-5em
-;
-text
--
-align
-:
-center
-;
-margin
--
-top
-:
-1em
-;
-margin
--
-bottom
-:
-1
-.
-5em
+2em
 ;
 text
 -
 shadow
 :
+0
+0
+3px
 black
 0
 0
-1em
+3px
+black
+0
+0
+3px
+black
+;
+}
+#
+ctrlTab
+-
+search
+{
+margin
+:
+0
+0
+20px
 ;
 }
 .
@@ -17930,19 +17825,38 @@ margin
 -
 bottom
 :
-40px
+20px
 ;
--
-moz
--
-box
--
-shadow
+cursor
 :
-1px
+pointer
+;
+font
+-
+weight
+:
+bold
+;
+}
+.
+ctrlTab
+-
+thumbnail
+>
+html
+|
+canvas
+{
+border
+:
 2px
-3px
-black
+solid
+white
+;
+margin
+:
+-
+2px
 ;
 }
 .
@@ -17956,7 +17870,21 @@ selected
 true
 "
 ]
+.
+ctrlTab
+-
+thumbnail
+:
+hover
 {
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
 -
 moz
 -
@@ -17964,48 +17892,39 @@ box
 -
 shadow
 :
-1px
+0
+0
 2px
+Highlight
+0
+0
+2px
+Highlight
+0
+0
 3px
-black
+Highlight
+0
+0
+4px
+Highlight
 0
 0
 10px
-white
+Highlight
 0
 0
 20px
-rgb
-(
-50
-170
-255
-)
-0
-0
-30px
-rgb
-(
-50
-170
-255
-)
-;
-}
-#
-ctrlTab
--
-pages
-{
-display
-:
-block
+white
 ;
 text
 -
-align
+shadow
 :
-center
+0
+0
+3px
+transparent
 ;
 }
 .
@@ -18013,12 +17932,6 @@ ctrlTab
 -
 pagePointer
 {
-display
-:
-inline
--
-block
-;
 margin
 :
 0
@@ -18071,6 +17984,10 @@ rgba
 3
 )
 ;
+cursor
+:
+pointer
+;
 }
 .
 ctrlTab
@@ -18094,5 +18011,9 @@ rgba
 .
 6
 )
+;
+cursor
+:
+default
 ;
 }
