--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -782,6 +782,49 @@ Previews
 ctrlTab
 -
 thumbnail
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+browser
+-
+tabPreviews
+.
+xml
+#
+ctrlTab
+-
+thumbnail
+"
+)
+;
+-
+moz
+-
+user
+-
+focus
+:
+normal
+;
+}
+.
+ctrlTab
+-
+thumbnail
 :
 not
 (
@@ -793,5 +836,33 @@ valid
 visibility
 :
 hidden
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
+;
+text
+-
+align
+:
+center
+;
+}
+.
+ctrlTab
+-
+pagePointer
+{
+display
+:
+inline
+-
+block
 ;
 }
