Backed out changeset 9b96bcff860b from bug 436304 - Implement All Tabs panel with previews and search.
UltraBlame original commit: 0d823e9893ad2dc95c4e402b280c01804c543721

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10430,15 +10430,29 @@ opacity
 0
 ;
 }
-.
+/
+*
+All
 tabs
--
+menupopup
+*
+/
+.
 alltabs
 -
-button
+item
 >
 .
-toolbarbutton
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
 -
 icon
 {
@@ -10455,23 +10469,118 @@ chrome
 :
 /
 /
-browser
+global
 /
 skin
 /
-tabbrowser
+icons
 /
-alltabs
+folder
+-
+item
 .
 png
 "
 )
 ;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+.
+alltabs
+-
+item
+[
+selected
+=
+"
+true
+"
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+alltabs
+-
+item
+[
+busy
+]
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
+.
+png
+"
+)
+;
+}
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
 margin
 :
-2px
-0
-2px
+0px
 ;
 }
 /
@@ -10876,25 +10985,41 @@ Panel
 #
 ctrlTab
 -
-panel
+label
 {
-padding
+font
+-
+weight
+:
+bold
+;
+font
+-
+size
+:
+1
+.
+5em
+;
+text
+-
+align
+:
+center
+;
+margin
 -
 top
 :
-15px
+1em
 ;
-}
-#
-ctrlTab
--
-search
-{
 margin
+-
+bottom
 :
-0
-0
-15px
+1
+.
+5em
 ;
 }
 .
@@ -10906,32 +11031,19 @@ margin
 -
 bottom
 :
-15px
+40px
 ;
-cursor
-:
-pointer
-;
-}
-.
-ctrlTab
 -
-thumbnail
->
-html
-|
-canvas
-{
-border
+moz
+-
+box
+-
+shadow
 :
 1px
-solid
+2px
+3px
 ThreeDShadow
-;
-margin
-:
--
-1px
 ;
 }
 .
@@ -10945,21 +11057,7 @@ selected
 true
 "
 ]
-.
-ctrlTab
--
-thumbnail
-:
-hover
 {
-background
-:
-Highlight
-;
-color
-:
-HighlightText
-;
 -
 moz
 -
@@ -10967,30 +11065,42 @@ box
 -
 shadow
 :
-0
-0
+1px
 2px
-Highlight
-0
-0
-2px
-Highlight
-0
-0
 3px
-Highlight
-0
-0
-4px
-Highlight
+ThreeDShadow
 0
 0
 10px
 Highlight
 0
 0
-15px
+20px
 Highlight
+0
+0
+25px
+Highlight
+0
+0
+30px
+Highlight
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
+;
+text
+-
+align
+:
+center
 ;
 }
 .
@@ -10998,6 +11108,12 @@ ctrlTab
 -
 pagePointer
 {
+display
+:
+inline
+-
+block
+;
 margin
 :
 0
@@ -11030,10 +11146,6 @@ background
 :
 ThreeDShadow
 ;
-cursor
-:
-pointer
-;
 }
 .
 ctrlTab
@@ -11050,9 +11162,5 @@ true
 background
 :
 ThreeDDarkShadow
-;
-cursor
-:
-default
 ;
 }
