--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14931,6 +14931,18 @@ Buttons
 .
 tabs
 -
+alltabs
+-
+box
+{
+margin
+:
+0
+;
+}
+.
+tabs
+-
 newtab
 -
 button
@@ -15152,6 +15164,19 @@ button
 hover
 :
 active
+.
+tabs
+-
+alltabs
+-
+button
+[
+open
+=
+"
+true
+"
+]
 {
 background
 -
@@ -15179,6 +15204,19 @@ button
 toolbarbutton
 -
 text
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
 .
 tabs
 -
@@ -15282,6 +15320,129 @@ opacity
 0
 .
 0
+;
+}
+/
+*
+*
+*
+All
+Tabs
+Menupopup
+*
+/
+.
+alltabs
+-
+item
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+tree
+/
+item
+.
+png
+"
+)
+;
+}
+.
+alltabs
+-
+item
+[
+selected
+=
+"
+true
+"
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+alltabs
+-
+item
+[
+busy
+]
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
+.
+png
+"
+)
+!
+important
 ;
 }
 .
@@ -18063,17 +18224,6 @@ level
 top
 "
 ]
-#
-ctrlTab
--
-panel
-:
-not
-(
-[
-sticky
-]
-)
 {
 background
 -
@@ -18119,13 +18269,13 @@ Panel
 #
 ctrlTab
 -
-panel
+label
 {
-padding
+font
 -
-top
+weight
 :
-20px
+bold
 ;
 font
 -
@@ -18133,36 +18283,36 @@ size
 :
 1
 .
-2em
+5em
+;
+text
+-
+align
+:
+center
+;
+margin
+-
+top
+:
+1em
+;
+margin
+-
+bottom
+:
+1
+.
+5em
 ;
 text
 -
 shadow
 :
-0
-0
-3px
 black
 0
 0
-3px
-black
-0
-0
-3px
-black
-;
-}
-#
-ctrlTab
--
-search
-{
-margin
-:
-0
-0
-20px
+1em
 ;
 }
 .
@@ -18174,38 +18324,19 @@ margin
 -
 bottom
 :
-20px
+40px
 ;
-cursor
-:
-pointer
-;
-font
 -
-weight
-:
-bold
-;
-}
-.
-ctrlTab
+moz
 -
-thumbnail
->
-html
-|
-canvas
-{
-border
+box
+-
+shadow
 :
+1px
 2px
-solid
-white
-;
-margin
-:
--
-2px
+3px
+black
 ;
 }
 .
@@ -18219,21 +18350,7 @@ selected
 true
 "
 ]
-.
-ctrlTab
--
-thumbnail
-:
-hover
 {
-background
-:
-Highlight
-;
-color
-:
-HighlightText
-;
 -
 moz
 -
@@ -18241,39 +18358,48 @@ box
 -
 shadow
 :
-0
-0
+1px
 2px
-Highlight
-0
-0
-2px
-Highlight
-0
-0
 3px
-Highlight
-0
-0
-4px
-Highlight
+black
 0
 0
 10px
-Highlight
+white
 0
 0
 20px
-white
+rgb
+(
+50
+170
+255
+)
+0
+0
+30px
+rgb
+(
+50
+170
+255
+)
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
 ;
 text
 -
-shadow
+align
 :
-0
-0
-3px
-transparent
+center
 ;
 }
 .
@@ -18281,6 +18407,12 @@ ctrlTab
 -
 pagePointer
 {
+display
+:
+inline
+-
+block
+;
 margin
 :
 0
@@ -18333,10 +18465,6 @@ rgba
 3
 )
 ;
-cursor
-:
-pointer
-;
 }
 .
 ctrlTab
@@ -18360,9 +18488,5 @@ rgba
 .
 6
 )
-;
-cursor
-:
-default
 ;
 }
