--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -822,12 +822,28 @@ border
 :
 none
 ;
+}
+#
+ctrlTab
+-
+label
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+compositor
+)
+{
 font
 :
-"
 Segoe
 UI
-"
 window
 ;
 font
@@ -835,6 +851,14 @@ font
 weight
 :
 normal
+;
+font
+-
+size
+:
+1
+.
+5em
 ;
 color
 :
@@ -849,24 +873,20 @@ white
 1px
 -
 1px
-.
-5em
+9px
 white
 -
 1px
 1px
-.
-5em
+9px
 white
 1px
 1px
-.
-5em
+9px
 white
 1px
 -
 1px
-.
-5em
+9px
 ;
 }
