--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13950,6 +13950,17 @@ button
 toolbarbutton
 -
 text
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+icon
 {
 display
 :
@@ -13966,47 +13977,16 @@ button
 .
 toolbarbutton
 -
-icon
+menu
+-
+dropmarker
 {
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-alltabs
-.
-png
-"
-)
-;
 margin
 :
-6px
-0
-4px
-;
--
-moz
--
-image
--
-region
-:
-auto
+2px
+1px
+2px
+0px
 ;
 }
 .
@@ -14132,6 +14112,142 @@ start
 bkgnd
 -
 animate
+.
+png
+"
+)
+;
+}
+/
+*
+All
+tabs
+menupopup
+*
+/
+.
+alltabs
+-
+item
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+folder
+-
+item
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+.
+alltabs
+-
+item
+[
+selected
+=
+"
+true
+"
+]
+{
+font
+-
+weight
+:
+bold
+;
+}
+.
+alltabs
+-
+item
+[
+busy
+]
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+loading_16
 .
 png
 "
@@ -17714,17 +17830,6 @@ level
 top
 "
 ]
-#
-ctrlTab
--
-panel
-:
-not
-(
-[
-sticky
-]
-)
 {
 background
 -
@@ -17770,13 +17875,13 @@ Panel
 #
 ctrlTab
 -
-panel
+label
 {
-padding
+font
 -
-top
+weight
 :
-20px
+bold
 ;
 font
 -
@@ -17784,36 +17889,36 @@ size
 :
 1
 .
-2em
+5em
+;
+text
+-
+align
+:
+center
+;
+margin
+-
+top
+:
+1em
+;
+margin
+-
+bottom
+:
+1
+.
+5em
 ;
 text
 -
 shadow
 :
-0
-0
-3px
 black
 0
 0
-3px
-black
-0
-0
-3px
-black
-;
-}
-#
-ctrlTab
--
-search
-{
-margin
-:
-0
-0
-20px
+1em
 ;
 }
 .
@@ -17825,38 +17930,19 @@ margin
 -
 bottom
 :
-20px
+40px
 ;
-cursor
-:
-pointer
-;
-font
 -
-weight
-:
-bold
-;
-}
-.
-ctrlTab
+moz
 -
-thumbnail
->
-html
-|
-canvas
-{
-border
+box
+-
+shadow
 :
+1px
 2px
-solid
-white
-;
-margin
-:
--
-2px
+3px
+black
 ;
 }
 .
@@ -17870,21 +17956,7 @@ selected
 true
 "
 ]
-.
-ctrlTab
--
-thumbnail
-:
-hover
 {
-background
-:
-Highlight
-;
-color
-:
-HighlightText
-;
 -
 moz
 -
@@ -17892,39 +17964,48 @@ box
 -
 shadow
 :
-0
-0
+1px
 2px
-Highlight
-0
-0
-2px
-Highlight
-0
-0
 3px
-Highlight
-0
-0
-4px
-Highlight
+black
 0
 0
 10px
-Highlight
+white
 0
 0
 20px
-white
+rgb
+(
+50
+170
+255
+)
+0
+0
+30px
+rgb
+(
+50
+170
+255
+)
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
 ;
 text
 -
-shadow
+align
 :
-0
-0
-3px
-transparent
+center
 ;
 }
 .
@@ -17932,6 +18013,12 @@ ctrlTab
 -
 pagePointer
 {
+display
+:
+inline
+-
+block
+;
 margin
 :
 0
@@ -17984,10 +18071,6 @@ rgba
 3
 )
 ;
-cursor
-:
-pointer
-;
 }
 .
 ctrlTab
@@ -18011,9 +18094,5 @@ rgba
 .
 6
 )
-;
-cursor
-:
-default
 ;
 }
