--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -100,6 +100,42 @@ arrowscrollbox
 %
 endif
 .
+tabs
+-
+alltabs
+-
+popup
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+tabbrowser
+.
+xml
+#
+tabbrowser
+-
+alltabs
+-
+popup
+"
+)
+;
+}
+.
 tab
 -
 close
