Bug 324121 - Extensions with available updates for the next version of the app should not be listed in app update extension will be disabled warning (AUS patch). r=dtownsend ui-r=beltzner
UltraBlame original commit: a6e0b26a65e89e43dfbe844d34b7bbef387ded71

--- a/toolkit/mozapps/update/content/updates.css
+++ b/toolkit/mozapps/update/content/updates.css
@@ -79,11 +79,11 @@ inherit
 *
 *
 *
-License
-Page
+Remote
+Content
 *
 /
-license
+remotecontent
 {
 -
 moz
@@ -107,7 +107,7 @@ updates
 .
 xml
 #
-license
+remotecontent
 "
 )
 ;
