--- a/toolkit/themes/gnomestripe/mozapps/update/updates.css
+++ b/toolkit/themes/gnomestripe/mozapps/update/updates.css
@@ -10,10 +10,10 @@ wizard
 -
 button
 [
-dlgtype
+heed
 =
 "
-finish
+true
 "
 ]
 {
@@ -22,6 +22,33 @@ font
 weight
 :
 bold
+;
+}
+.
+wizard
+-
+button
+>
+.
+button
+-
+box
+{
+padding
+-
+left
+:
+15px
+!
+important
+;
+padding
+-
+right
+:
+15px
+!
+important
 ;
 }
 link
@@ -121,15 +148,7 @@ dotted
 black
 ;
 }
-/
-*
-*
-*
-License
-Page
-*
-/
-license
+remotecontent
 {
 margin
 -
@@ -175,6 +194,14 @@ bottom
 1px
 ;
 }
+/
+*
+*
+*
+License
+Page
+*
+/
 .
 loadingBox
 {
@@ -187,7 +214,7 @@ padding
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 {
 margin
 -
@@ -197,7 +224,7 @@ top
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -233,7 +260,7 @@ png
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -290,71 +317,6 @@ margin
 5px
 4px
 3px
-;
-}
-wizard
-[
-currentpageid
-=
-"
-updatesfound
-"
-]
-.
-wizard
--
-button
-[
-dlgtype
-=
-"
-next
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-wizard
-[
-currentpageid
-=
-"
-updatesfound
-"
-]
-.
-wizard
--
-button
-[
-dlgtype
-=
-"
-next
-"
-]
->
-.
-button
--
-box
-{
-padding
--
-left
-:
-15px
-;
-padding
--
-right
-:
-15px
 ;
 }
 #
@@ -464,24 +426,23 @@ Page
 *
 /
 #
-downloadName
+downloadStatusTop
+#
+downloadStatusLine
 {
-margin
 -
-top
+moz
+-
+box
+-
+align
 :
-3px
+center
 ;
 }
 #
 downloadStatus
 {
-margin
--
-top
-:
-6px
-;
 height
 :
 3em
@@ -493,10 +454,9 @@ important
 downloadThrobber
 {
 margin
+-
+left
 :
-5px
-3px
-0px
 5px
 ;
 list
@@ -523,6 +483,16 @@ notloading_16
 png
 "
 )
+;
+}
+#
+downloadStatusProgress
+{
+padding
+-
+right
+:
+5px
 ;
 }
 #
@@ -562,21 +532,251 @@ png
 ;
 }
 #
-downloadStatusLine
+pauseButton
 {
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+pause
+?
+size
+=
+menu
+"
+)
+;
 -
 moz
 -
-box
--
-align
+appearance
 :
-start
+none
+;
+background
+-
+color
+:
+transparent
+;
+border
+:
+none
+;
+padding
+:
+0
+;
+margin
+:
+0
+;
+min
+-
+width
+:
+0
+;
+min
+-
+height
+:
+0
+;
+}
+/
+*
+!
+Important
+must
+be
+used
+otherwise
+this
+won
+'
+t
+immediately
+take
+affect
+*
+/
+#
+pauseButton
+>
+.
+button
+-
+box
+{
+padding
+:
+0
+!
+important
+;
+}
+#
+pauseButton
+[
+disabled
+=
+"
+true
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+pause
+?
+size
+=
+menu
+&
+state
+=
+disabled
+"
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+play
+?
+size
+=
+menu
+"
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+media
+-
+play
+?
+size
+=
+menu
+&
+state
+=
+disabled
+"
+)
 ;
 }
 #
 verificationFailedIcon
 {
+margin
+-
+left
+:
+5px
+;
 list
 -
 style
@@ -605,13 +805,6 @@ size
 menu
 "
 )
-;
-margin
-:
-5px
-3px
-0px
-5px
 ;
 }
 /
