--- a/toolkit/themes/pinstripe/mozapps/update/updates.css
+++ b/toolkit/themes/pinstripe/mozapps/update/updates.css
@@ -6,16 +6,7 @@ General
 *
 /
 .
-wizard
--
-button
-[
-dlgtype
-=
-"
-finish
-"
-]
+heed
 {
 font
 -
@@ -136,15 +127,7 @@ padding
 10px
 ;
 }
-/
-*
-*
-*
-License
-Page
-*
-/
-license
+remotecontent
 {
 margin
 -
@@ -190,6 +173,14 @@ bottom
 1px
 ;
 }
+/
+*
+*
+*
+License
+Page
+*
+/
 .
 loadingBox
 {
@@ -202,7 +193,7 @@ padding
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 {
 margin
 -
@@ -212,7 +203,7 @@ top
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -248,7 +239,7 @@ png
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -499,33 +490,27 @@ Page
 *
 /
 #
-downloadName
-{
-margin
--
-top
-:
-3px
-;
-}
+downloadStatusTop
 #
-downloadStatus
+downloadStatusLine
 {
-margin
 -
-top
+moz
+-
+box
+-
+align
 :
-6px
+center
 ;
 }
 #
 downloadThrobber
 {
 margin
+-
+left
 :
-5px
-3px
-0px
 5px
 ;
 list
@@ -591,8 +576,315 @@ png
 ;
 }
 #
+downloadStatusProgress
+{
+padding
+-
+right
+:
+5px
+;
+}
+#
+pauseButton
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+update
+/
+buttons
+.
+png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+16px
+64px
+0px
+)
+;
+-
+moz
+-
+appearance
+:
+none
+;
+background
+-
+color
+:
+transparent
+;
+border
+:
+none
+;
+min
+-
+height
+:
+16px
+;
+min
+-
+width
+:
+16px
+;
+max
+-
+height
+:
+16px
+;
+max
+-
+width
+:
+16px
+;
+padding
+:
+0
+;
+margin
+:
+0
+1px
+0
+1px
+;
+}
+/
+*
+!
+Important
+must
+be
+used
+otherwise
+this
+won
+'
+t
+immediately
+take
+affect
+*
+/
+#
+pauseButton
+>
+.
+button
+-
+box
+{
+padding
+:
+0
+!
+important
+;
+}
+#
+pauseButton
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+32px
+64px
+16px
+)
+;
+}
+#
+pauseButton
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+48px
+64px
+32px
+)
+;
+}
+#
+pauseButton
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+16px
+64px
+0px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+16px
+32px
+0px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+32px
+32px
+16px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+:
+hover
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+48px
+32px
+32px
+)
+;
+}
+#
 verificationFailedIcon
 {
+margin
+-
+left
+:
+5px
+;
 list
 -
 style
@@ -617,26 +909,6 @@ notfound
 png
 "
 )
-;
-margin
-:
-5px
-3px
-0px
-5px
-;
-}
-#
-downloadStatusLine
-{
--
-moz
--
-box
--
-align
-:
-center
 ;
 }
 /
