--- a/toolkit/themes/winstripe/mozapps/update/updates.css
+++ b/toolkit/themes/winstripe/mozapps/update/updates.css
@@ -6,22 +6,40 @@ General
 *
 /
 .
-wizard
--
-button
-[
-dlgtype
-=
-"
-finish
-"
-]
+heed
 {
 font
 -
 weight
 :
 bold
+;
+}
+.
+wizard
+-
+button
+>
+.
+button
+-
+box
+{
+padding
+-
+left
+:
+15px
+!
+important
+;
+padding
+-
+right
+:
+15px
+!
+important
 ;
 }
 link
@@ -121,15 +139,7 @@ dotted
 black
 ;
 }
-/
-*
-*
-*
-License
-Page
-*
-/
-license
+remotecontent
 {
 margin
 -
@@ -175,6 +185,14 @@ bottom
 1px
 ;
 }
+/
+*
+*
+*
+License
+Page
+*
+/
 .
 loadingBox
 {
@@ -187,7 +205,7 @@ padding
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 {
 margin
 -
@@ -197,7 +215,7 @@ top
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -233,7 +251,7 @@ png
 ;
 }
 .
-licenseLoadingThrobber
+remoteLoadingThrobber
 [
 state
 =
@@ -286,71 +304,6 @@ margin
 5px
 4px
 3px
-;
-}
-wizard
-[
-currentpageid
-=
-"
-updatesfound
-"
-]
-.
-wizard
--
-button
-[
-dlgtype
-=
-"
-next
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-wizard
-[
-currentpageid
-=
-"
-updatesfound
-"
-]
-.
-wizard
--
-button
-[
-dlgtype
-=
-"
-next
-"
-]
->
-.
-button
--
-box
-{
-padding
--
-left
-:
-15px
-;
-padding
--
-right
-:
-15px
 ;
 }
 #
@@ -456,24 +409,23 @@ Page
 *
 /
 #
-downloadName
+downloadStatusTop
+#
+downloadStatusLine
 {
-margin
 -
-top
+moz
+-
+box
+-
+align
 :
-3px
+center
 ;
 }
 #
 downloadStatus
 {
-margin
--
-top
-:
-6px
-;
 height
 :
 3em
@@ -485,10 +437,9 @@ important
 downloadThrobber
 {
 margin
+-
+left
 :
-5px
-3px
-0px
 5px
 ;
 list
@@ -554,21 +505,318 @@ png
 ;
 }
 #
-downloadStatusLine
+downloadStatusProgress
+{
+padding
+-
+right
+:
+5px
+;
+}
+#
+pauseButton
 {
 -
 moz
 -
-box
--
-align
+appearance
 :
-start
+none
+;
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+downloads
+/
+downloadButtons
+.
+png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+48px
+16px
+32px
+)
+;
+background
+-
+color
+:
+transparent
+;
+border
+:
+none
+;
+padding
+:
+0
+;
+margin
+:
+0
+;
+min
+-
+width
+:
+0
+;
+min
+-
+height
+:
+0
+;
+}
+/
+*
+!
+Important
+must
+be
+used
+otherwise
+this
+won
+'
+t
+immediately
+take
+affect
+*
+/
+#
+pauseButton
+>
+.
+button
+-
+box
+{
+padding
+:
+0
+!
+important
+;
+}
+#
+pauseButton
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+48px
+32px
+32px
+)
+;
+}
+#
+pauseButton
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+48px
+48px
+32px
+)
+;
+}
+#
+pauseButton
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+48px
+64px
+32px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+16px
+32px
+0px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+16px
+48px
+0px
+)
+;
+}
+#
+pauseButton
+[
+paused
+=
+"
+true
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+48px
+16px
+64px
+0px
+)
 ;
 }
 #
 verificationFailedIcon
 {
+margin
+-
+left
+:
+5px
+;
 list
 -
 style
@@ -593,13 +841,6 @@ notfound
 png
 "
 )
-;
-margin
-:
-5px
-3px
-0px
-5px
 ;
 }
 /
