Bug 436304 - Implement All Tabs panel with previews and search. r=connor
UltraBlame original commit: bf2f8ad8f1ce19a0c40007da760ec267089061c3

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -782,6 +782,40 @@ Previews
 ctrlTab
 -
 thumbnail
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+browser
+-
+tabPreviews
+.
+xml
+#
+ctrlTab
+-
+thumbnail
+"
+)
+;
+}
+.
+ctrlTab
+-
+thumbnail
 :
 not
 (
@@ -793,5 +827,33 @@ valid
 visibility
 :
 hidden
+;
+}
+#
+ctrlTab
+-
+pages
+{
+display
+:
+block
+;
+text
+-
+align
+:
+center
+;
+}
+.
+ctrlTab
+-
+pagePointer
+{
+display
+:
+inline
+-
+block
 ;
 }
