--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14931,18 +14931,6 @@ Buttons
 .
 tabs
 -
-alltabs
--
-box
-{
-margin
-:
-0
-;
-}
-.
-tabs
--
 newtab
 -
 button
@@ -15164,19 +15152,6 @@ button
 hover
 :
 active
-.
-tabs
--
-alltabs
--
-button
-[
-open
-=
-"
-true
-"
-]
 {
 background
 -
@@ -15204,19 +15179,6 @@ button
 toolbarbutton
 -
 text
-.
-tabs
--
-alltabs
--
-button
->
-.
-toolbarbutton
--
-menu
--
-dropmarker
 .
 tabs
 -
@@ -15320,129 +15282,6 @@ opacity
 0
 .
 0
-;
-}
-/
-*
-*
-*
-All
-Tabs
-Menupopup
-*
-/
-.
-alltabs
--
-item
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-tree
-/
-item
-.
-png
-"
-)
-;
-}
-.
-alltabs
--
-item
-[
-selected
-=
-"
-true
-"
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-alltabs
--
-item
-[
-busy
-]
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading_16
-.
-png
-"
-)
-!
-important
 ;
 }
 .
@@ -18224,6 +18063,17 @@ level
 top
 "
 ]
+#
+ctrlTab
+-
+panel
+:
+not
+(
+[
+sticky
+]
+)
 {
 background
 -
@@ -18269,13 +18119,13 @@ Panel
 #
 ctrlTab
 -
-label
+panel
 {
-font
+padding
 -
-weight
+top
 :
-bold
+20px
 ;
 font
 -
@@ -18283,36 +18133,32 @@ size
 :
 1
 .
-5em
-;
-text
--
-align
-:
-center
-;
-margin
--
-top
-:
-1em
-;
-margin
--
-bottom
-:
-1
-.
-5em
+2em
 ;
 text
 -
 shadow
 :
+0
+0
+3px
 black
 0
 0
-1em
+3px
+black
+;
+}
+#
+ctrlTab
+-
+search
+{
+margin
+:
+0
+0
+20px
 ;
 }
 .
@@ -18324,19 +18170,38 @@ margin
 -
 bottom
 :
-40px
+20px
 ;
--
-moz
--
-box
--
-shadow
+cursor
 :
-1px
+pointer
+;
+font
+-
+weight
+:
+bold
+;
+}
+.
+ctrlTab
+-
+thumbnail
+>
+html
+|
+canvas
+{
+border
+:
 2px
-3px
-black
+solid
+white
+;
+margin
+:
+-
+2px
 ;
 }
 .
@@ -18350,7 +18215,21 @@ selected
 true
 "
 ]
+.
+ctrlTab
+-
+thumbnail
+:
+hover
 {
+background
+:
+Highlight
+;
+color
+:
+HighlightText
+;
 -
 moz
 -
@@ -18358,48 +18237,39 @@ box
 -
 shadow
 :
-1px
+0
+0
 2px
+Highlight
+0
+0
+2px
+Highlight
+0
+0
 3px
-black
+Highlight
+0
+0
+4px
+Highlight
 0
 0
 10px
-white
+Highlight
 0
 0
 20px
-rgb
-(
-50
-170
-255
-)
-0
-0
-30px
-rgb
-(
-50
-170
-255
-)
-;
-}
-#
-ctrlTab
--
-pages
-{
-display
-:
-block
+white
 ;
 text
 -
-align
+shadow
 :
-center
+0
+0
+3px
+transparent
 ;
 }
 .
@@ -18407,12 +18277,6 @@ ctrlTab
 -
 pagePointer
 {
-display
-:
-inline
--
-block
-;
 margin
 :
 0
@@ -18465,6 +18329,10 @@ rgba
 3
 )
 ;
+cursor
+:
+pointer
+;
 }
 .
 ctrlTab
@@ -18488,5 +18356,9 @@ rgba
 .
 6
 )
+;
+cursor
+:
+default
 ;
 }
