Extend "Clear Private Data" with time period option.  b=453440, r=mconnor ui-r=beltzner a=blocking-firefox3.1
UltraBlame original commit: 7fc3096ef585821f0453febb4073f79bb56e498d

--- a/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -1623,3 +1623,55 @@ start
 10px
 ;
 }
+/
+*
+*
+*
+Clear
+Private
+Data
+*
+/
+#
+SanitizeDurationBox
+{
+padding
+-
+bottom
+:
+10px
+;
+}
+#
+sanitizeDurationChoice
+{
+margin
+:
+0
+;
+}
+#
+sanitizeDurationLabel
+{
+-
+moz
+-
+margin
+-
+start
+:
+3px
+;
+}
+#
+SanitizeDialogPane
+>
+groupbox
+{
+margin
+-
+top
+:
+0
+;
+}
