--- a/browser/themes/winstripe/browser/preferences/preferences.css
+++ b/browser/themes/winstripe/browser/preferences/preferences.css
@@ -1375,3 +1375,55 @@ bottom
 4px
 ;
 }
+/
+*
+*
+*
+Clear
+Private
+Data
+*
+/
+#
+SanitizeDurationBox
+{
+padding
+-
+bottom
+:
+10px
+;
+}
+#
+sanitizeDurationChoice
+{
+margin
+:
+0
+;
+}
+#
+sanitizeDurationLabel
+{
+-
+moz
+-
+margin
+-
+start
+:
+3px
+;
+}
+#
+SanitizeDialogPane
+>
+groupbox
+{
+margin
+-
+top
+:
+0
+;
+}
