Bug 463177 - Open "Clear Private Data" dialog from about:privatebrowsing; r,a1.9.1b2=mconnor
UltraBlame original commit: 18fec592b35be494840d4b9dff01f61954fd917a

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -664,6 +664,133 @@ png
 /
 >
 <
+script
+type
+=
+"
+application
+/
+x
+-
+javascript
+;
+version
+=
+1
+.
+7
+"
+>
+<
+!
+[
+CDATA
+[
+const
+Cc
+=
+Components
+.
+classes
+;
+const
+Ci
+=
+Components
+.
+interfaces
+;
+function
+openSanitizeDialog
+(
+)
+{
+let
+mainWindow
+=
+window
+.
+QueryInterface
+(
+Ci
+.
+nsIInterfaceRequestor
+)
+.
+getInterface
+(
+Ci
+.
+nsIWebNavigation
+)
+.
+QueryInterface
+(
+Ci
+.
+nsIDocShellTreeItem
+)
+.
+rootTreeItem
+.
+QueryInterface
+(
+Ci
+.
+nsIInterfaceRequestor
+)
+.
+getInterface
+(
+Ci
+.
+nsIDOMWindow
+)
+;
+let
+browserGlue
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+browser
+/
+browserglue
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIBrowserGlue
+)
+;
+browserGlue
+.
+sanitize
+(
+mainWindow
+|
+|
+null
+)
+;
+}
+]
+]
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -849,24 +976,6 @@ p
 /
 div
 >
-#
-XXX
-do
-not
-show
-the
-clear
-recent
-history
-section
-until
-bug
-453440
-is
-fixed
-#
-if
-0
 <
 !
 -
@@ -951,10 +1060,13 @@ recentHistory
 accesskey
 ;
 "
-disabled
+oncommand
 =
 "
-true
+openSanitizeDialog
+(
+)
+;
 "
 /
 >
@@ -962,8 +1074,6 @@ true
 /
 div
 >
-#
-endif
 <
 !
 -
