Bug 463712 - text-shadow doesn't work for xul textboxes. r=enndeakin
UltraBlame original commit: d463a6310fe883e0f0614aeff191beefe3249066

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -4510,6 +4510,12 @@ select
 :
 text
 ;
+text
+-
+shadow
+:
+none
+;
 }
 textbox
 [
@@ -4570,6 +4576,12 @@ align
 :
 inherit
 ;
+text
+-
+shadow
+:
+inherit
+;
 }
 html
 |
@@ -4587,6 +4599,12 @@ appearance
 none
 !
 important
+;
+text
+-
+shadow
+:
+inherit
 ;
 }
 .
