--- a/toolkit/themes/winstripe/global/checkbox.css
+++ b/toolkit/themes/winstripe/global/checkbox.css
@@ -777,6 +777,76 @@ color
 GrayText
 ;
 }
+/
+*
+XXX
+Hack
+to
+work
+around
+bug
+458231
+*
+/
+checkbox
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+text
+-
+shadow
+:
+1px
+1px
+transparent
+;
+}
+checkbox
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+>
+.
+checkbox
+-
+label
+-
+box
+>
+.
+checkbox
+-
+label
+{
+margin
+-
+bottom
+:
+-
+2px
+!
+important
+;
+}
 checkbox
 [
 disabled
