--- a/toolkit/themes/winstripe/global/radio.css
+++ b/toolkit/themes/winstripe/global/radio.css
@@ -809,6 +809,76 @@ color
 GrayText
 ;
 }
+/
+*
+XXX
+Hack
+to
+work
+around
+bug
+458231
+*
+/
+radio
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+{
+text
+-
+shadow
+:
+1px
+1px
+transparent
+;
+}
+radio
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+classic
+)
+>
+.
+radio
+-
+label
+-
+box
+>
+.
+radio
+-
+label
+{
+margin
+-
+bottom
+:
+-
+2px
+!
+important
+;
+}
 radio
 [
 disabled
